Update docs and fix helm chart

--- a/charts/openshift-console-plugin/values.yaml
+++ b/charts/openshift-console-plugin/values.yaml
@@ -1,6 +1,6 @@
 ---
 plugin:
-  name: "gitops-plugin"
+  name: "gitops-admin-plugin"
   description: ""
   image: ""
   imagePullPolicy: IfNotPresent
