Make env a string

--- a/test/apps/long/manifests/long-job.yaml
+++ b/test/apps/long/manifests/long-job.yaml
@@ -20,7 +20,7 @@ spec:
           sleep $DELAY
         env:
         - name: DELAY
-          value: 10
+          value: "10"
         image: registry.redhat.io/openshift-gitops-1/argocd-rhel8:1.7
         imagePullPolicy: IfNotPresent
         name: long-job
