Working on getting token exchange working

--- a/charts/openshift-console-plugin/values.yaml
+++ b/charts/openshift-console-plugin/values.yaml
@@ -23,7 +23,7 @@ plugin:
     requests:
       cpu: 10m
       memory: 50Mi
-  basePath: /
+  basePath: /plugin/
   certificateSecretName: ""
   serviceAccount:
     create: true
