--- a/charts/openshift-console-plugin/templates/consoleplugin.yaml
+++ b/charts/openshift-console-plugin/templates/consoleplugin.yaml
@@ -2,17 +2,17 @@ apiVersion: console.openshift.io/v1
 kind: ConsolePlugin
 metadata:
   name: {{ template "openshift-console-plugin.name" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "openshift-console-plugin.labels" . | nindent 4 }}
 spec:
   displayName: {{ default (printf "%s Plugin" (include "openshift-console-plugin.name" .)) .Values.plugin.description }}
   backend:
     service:
+      basePath: {{ .Values.plugin.basePath }}
       name: {{ template "openshift-console-plugin.name" . }}
       namespace: {{ .Release.Namespace }}
       port: {{ .Values.plugin.port }}
-      basePath: {{ .Values.plugin.basePath }}
+    type: Service
   proxy:
   - alias: token-exchange
     authorization: UserToken
