--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,12 @@
     "paths": {
       "@gitops-utils": ["src/utils"],
       "@gitops-utils/*": ["src/utils/*"],
+      "@shared": ["src/shared"],
+      "@shared/*": ["src/shared/*"],
       "@application-model": ["src/application/models"],
       "@application-model/*": ["src/application/models/*"],
+      "@appproject-model": ["src/project/models"],
+      "@appproject-model/*": ["src/project/models/*"],
       "@images": ["src/images"]
     }
   },
