--- a/console-extensions.json
+++ b/console-extensions.json
@@ -74,7 +74,7 @@
         "version": "v1alpha1"
       },
       "template": {
-        "$codeRef": "yamlTemplates.defaultApplicationYamlTemplate"
+        "$codeRef": "yamlApplicationTemplates.defaultApplicationYamlTemplate"
       }
     }
   },
@@ -90,7 +90,81 @@
         "$codeRef": "useApplicationActionsProvider.useApplicationActionsProvider"
       }
     }
+  },
+  {
+    "type": "console.flag/model",
+    "properties": {
+      "flag": "APPPROJECT",
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      }
+    }
+  },
+  {
+    "type": "console.navigation/resource-ns",
+    "properties": {
+      "id": "appproject",
+      "name": "%plugin__gitops-admin-plugin~Project%",
+      "perspective": "admin",
+      "section": "gitops",
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      }
+    }
+  },
+  {
+    "type": "console.page/resource/list",
+    "properties": {
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      },
+      "component": {
+        "$codeRef": "AppProjectList"
+      }
+    }
+  },
+  {
+    "type": "console.page/resource/details",
+    "properties": {
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      },
+      "component": { "$codeRef": "AppProjectDetails" }
+    }
+  },
+  {
+    "type": "console.yaml-template",
+    "properties": {
+      "name": "default",
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      },
+      "template": {
+        "$codeRef": "yamlAppProjectTemplates.defaultAppProjectYamlTemplate"
+      }
+    }
+  },
+  {
+    "type": "console.action/resource-provider",
+    "properties": {
+      "model": {
+        "group": "argoproj.io",
+        "kind": "AppProject",
+        "version": "v1alpha1"
+      },
+      "provider": {
+        "$codeRef": "useAppProjectActionsProvider.useAppProjectActionsProvider"
+      }
+    }
   }
-
-
 ]
