--- a/console-extensions.json
+++ b/console-extensions.json
@@ -41,6 +41,21 @@
     }
   },
   {
+    "type": "console.tab/horizontalNav",
+    "properties": {
+      "page": {
+        "name": "Applications",
+        "href": "applicationsets-applications"
+      },
+      "model": {
+        "group": "argoproj.io",
+        "kind": "ApplicationSet",
+        "version": "v1alpha1"
+      },
+      "component": { "$codeRef": "AppSetAppsPage" }
+    }
+  },
+  {
     "type": "console.navigation/resource-ns",
     "properties": {
       "id": "rollout",
