Disable the proxy in the helm chart via .helmignore

--- a/charts/openshift-console-plugin/templates/consoleplugin.yaml
+++ b/charts/openshift-console-plugin/templates/consoleplugin.yaml
@@ -13,12 +13,12 @@ spec:
       namespace: {{ .Release.Namespace }}
       port: {{ .Values.plugin.port }}
     type: Service
-  proxy:
-  - alias: proxy
-    authorization: UserToken
-    endpoint:
-      type: Service
-      service:
-        name: gitops-plugin-proxy
-        namespace: {{ .Release.Namespace }}
-        port: 8443
+  # proxy:
+  # - alias: proxy
+  #   authorization: UserToken
+  #   endpoint:
+  #     type: Service
+  #     service:
+  #       name: gitops-plugin-proxy
+  #       namespace: {{ .Release.Namespace }}
+  #       port: 8443
