--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,14 @@
       "@shared": ["src/shared"],
       "@shared/*": ["src/shared/*"],
       "@application": ["src/application"],
+      "@rollout": ["src/rollout"],
       "@appproject": ["src/appproject"],
       "@application-model": ["src/application/models"],
       "@application-model/*": ["src/application/models/*"],
       "@appproject-model": ["src/project/models"],
       "@appproject-model/*": ["src/project/models/*"],
+      "@rollout-model": ["src/rollout/models"],
+      "@rollout-model/*": ["src/rollout/models/*"],
       "@images": ["src/images"]
     }
   },
