--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "lint": "eslint ./src --fix && stylelint \"src/**/*.css\" --allow-empty-input --fix"
   },
   "devDependencies": {
-    "@openshift-console/dynamic-plugin-sdk": "0.0.19",
-    "@openshift-console/dynamic-plugin-sdk-internal": "^0.0.11",
-    "@openshift-console/dynamic-plugin-sdk-webpack": "0.0.9",
-    "@patternfly/react-core": "4.235.7",
-    "@patternfly/react-table": "^4.112.6",
+    "@openshift-console/dynamic-plugin-sdk": "0.0.21",
+    "@openshift-console/dynamic-plugin-sdk-internal": "^0.0.12",
+    "@openshift-console/dynamic-plugin-sdk-webpack": "0.0.11",
+    "@patternfly/react-core": "4.276.8",
+    "@patternfly/react-table": "4.113.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
     "@types/react-helmet": "^6.1.4",
@@ -43,8 +43,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.11",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router": "5.3.x",
+    "react-router-dom": "5.3.x",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
