--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@openshift-console/dynamic-plugin-sdk-internal": "1.0.0",
     "@openshift-console/dynamic-plugin-sdk-webpack": "1.0.1",
     "@openshift-console/plugin-shared": "^0.0.1",
-    "@patternfly/react-core": "^5.1.1",
-    "@patternfly/react-icons": "^5.1.1",
-    "@patternfly/react-styles": "^5.1.1",
-    "@patternfly/react-table": "^5.1.1",
+    "@patternfly/react-core": "5.1.1",
+    "@patternfly/react-icons": "5.1.1",
+    "@patternfly/react-styles": "5.1.1",
+    "@patternfly/react-table": "5.1.1",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.40",
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -52,8 +52,8 @@
     "pluralize": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-stylelint": "^0.4.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.3",
     "react-router": "5.3.x",
@@ -81,8 +81,8 @@
         "ApplicationList": "./gitops/components/application/ApplicationListTab.tsx",
         "ApplicationDetails": "./gitops/components/application/ApplicationNavPage.tsx",
         "yamlApplicationTemplates": "src/gitops/components/application/templates/index.ts",
-
-        "useApplicationActionsProvider": "./gitops/components/application/hooks/useApplicationActionsProvider.tsx"
+        "useApplicationActionsProvider": "./gitops/components/application/hooks/useApplicationActionsProvider.tsx",
+        "modalProvider": "./utils/components/ModalProvider/ModalProvider.tsx"
     },
     "dependencies": {
       "@console/pluginAPI": "*"
