Add rollouts extension and clean compile

--- a/console-extensions.json
+++ b/console-extensions.json
@@ -210,5 +210,72 @@
           },
           "component": { "$codeRef": "ApplicationSetDetails" }
         }
+      },
+
+      {
+        "type": "console.flag/model",
+        "properties": {
+          "flag": "ROLLOUT",
+          "model": {
+            "group": "argoproj.io",
+            "kind": "Rollout",
+            "version": "v1alpha1"
+          }
+        }
+      },
+      {
+        "type": "console.navigation/resource-ns",
+        "properties": {
+          "id": "rollout",
+          "name": "%plugin__gitops-admin-plugin~Rollouts%",
+          "perspective": "admin",
+          "section": "workloads",
+          "insertAfter": "statefulsets",
+          "model": {
+            "group": "argoproj.io",
+            "kind": "Rollout",
+            "version": "v1alpha1"
+          }
+        }
+      },
+      {
+        "type": "console.page/resource/list",
+        "properties": {
+          "model": {
+            "group": "argoproj.io",
+            "kind": "Rollout",
+            "version": "v1alpha1"
+          },
+          "component": {
+            "$codeRef": "RolloutList"
+          }
+        }
+      },
+      {
+        "type": "console.action/resource-provider",
+        "properties": {
+          "model": {
+            "group": "argoproj.io",
+            "kind": "Rollout",
+            "version": "v1alpha1"
+          },
+          "provider": {
+            "$codeRef": "useRolloutActionsProvider.useRolloutActionsProvider"
+          }
+        }
+      },
+      {
+        "type": "console.yaml-template",
+        "properties": {
+          "name": "default",
+          "model": {
+            "group": "argoproj.io",
+            "kind": "Rollout",
+            "version": "v1alpha1"
+          },
+          "template": {
+            "$codeRef": "yamlRolloutTemplates.defaultRolloutYamlTemplate"
+          }
+        }
       }
 ]
