--- a/manifests/base/configmap.yaml
+++ b/manifests/base/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "openshift-console-plugin.name" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "openshift-console-plugin.labels" . | nindent 4 }}
+    app: gitops-admin-plugin
+    app.kubernetes.io/instance: gitops-admin-plugin
+  name: gitops-admin-plugin
 data:
   nginx.conf: |
     error_log /dev/stdout info;
@@ -15,8 +15,7 @@ data:
       default_type       application/octet-stream;
       keepalive_timeout  65;
       server {
-        listen              {{ .Values.plugin.port }} ssl;
-        listen              [::]:{{ .Values.plugin.port }} ssl;
+        listen              9443 ssl;
         ssl_certificate     /var/cert/tls.crt;
         ssl_certificate_key /var/cert/tls.key;
         root                /usr/share/nginx/html;
