--- a/package.json
+++ b/package.json
@@ -95,8 +95,11 @@
         "useRolloutActionsProvider": "./rollout/components/hooks/useRolloutActionsProvider.tsx",
         "yamlRolloutTemplates": "src/rollout/templates/index.ts",
 
+        "modalProvider": "./utils/components/ModalProvider/ModalProvider.tsx",
 
-        "modalProvider": "./utils/components/ModalProvider/ModalProvider.tsx"
+        "dashboardUtils": "./gitops/components/dashboards/dashboardUtils.ts",
+        "ApplicationInventory": "./gitops/components/dashboards/Applications.tsx",
+        "ApplicationSetInventory": "./gitops/components/dashboards/ApplicationSets.tsx"
     },
     "dependencies": {
       "@console/pluginAPI": "*"
