--- a/console-extensions.json
+++ b/console-extensions.json
@@ -300,14 +300,14 @@
         }
       },
       {
+        "type": "console.dashboards/overview/inventory/item/group",
         "flags": {
           "required": ["APPLICATION"]
         },
         "properties": {
           "icon": { "$codeRef": "ApplicationInventory.HealthSuspendedIcon" },
-          "id": "app-suspended"
-        },
-        "type": "console.dashboards/overview/inventory/item/group"
+          "id": "gitops-suspended"
+        }
       },
       {
         "type": "console.dashboards/overview/inventory/item",
