--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
         "modalProvider": "./utils/components/ModalProvider/ModalProvider.tsx",
 
         "dashboardUtils": "./gitops/components/dashboards/dashboardUtils.ts",
-        "ApplicationInventory": "./gitops/components/dashboards/Applications.tsx",
+        "ApplicationInventory": "src/gitops/components/dashboards/Applications.tsx",
         "ApplicationSetInventory": "./gitops/components/dashboards/ApplicationSets.tsx"
     },
     "dependencies": {
